--- a/src/main/resources/views/LoginForm.fxml
+++ b/src/main/resources/views/LoginForm.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-      prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.LoginFormController" styleClass="root">
-    <children>
-        <Label text="Hello">
-            <font>
-                <Font size="100.0"/>
-            </font>
-        </Label>
-    </children>
-</VBox>
+<StackPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <VBox alignment="CENTER" maxHeight="500.0" maxWidth="600.0" minHeight="400.0" minWidth="500.0" prefHeight="500.0" prefWidth="550.0" styleClass="root" StackPane.alignment="CENTER">
+         <children>
+            <Label styleClass="root" text="Hello" VBox.vgrow="ALWAYS">
+               <font>
+                  <Font size="100.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+   </children>
+</StackPane>
