--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -9,3 +9,102 @@
   -fx-antialiasing: subpixel;
   -fx-font-smoothing-type: gray;
 }
+
+.container {
+  -fx-background-color: #f1f1f1;
+  -fx-border-radius: 8;
+  -fx-background-radius: 8;
+  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.12), 8, 0.2, 0, 2);
+  -fx-padding: 14;
+}
+
+.container * {
+    -fx-background-color: transparent;
+}
+
+/***********************
+  Base Typography
+***********************/
+.label {
+  -fx-text-fill: -fx-text-color;
+  -fx-font-size: 14px;
+}
+
+.title {
+  /*-fx-text-color: -fx-accent-color;*/
+  -fx-font-size: 24px;
+  -fx-font-weight: bold;
+}
+
+.text-field,
+.password-field,
+.combo-box {
+  -fx-background-radius: 6;
+  -fx-padding: 8 30;
+  -fx-border-color: #999;
+  -fx-border-radius: 6;
+}
+
+/***********************
+  Buttons
+***********************/
+.button {
+  -fx-font-weight: bold;
+  -fx-background-radius: 8;
+  -fx-cursor: hand;
+  -fx-padding: 8 14;
+  -fx-alignment: center;
+  -fx-content-display: LEFT; /* icon + text */
+  -fx-graphic-text-gap: 8;
+  -fx-background-color: #B7D9FF;
+  -fx-text-fill: #111;
+}
+
+.button.outline{
+    -fx-background-color: transparent;
+    -fx-border-color: #B7D9FF;
+    -fx-text-fill: #111;
+    -fx-border-radius: 8;
+    -fx-background-radius: 8;
+}
+
+.button:hover,
+.button:focused,
+.button:pressed{
+  -fx-background-color: derive(#B7D9FF, -10%);
+}
+
+.button.outline:hover,
+.button.outline:focused,
+.button.outline:pressed{
+    -fx-background-color: derive(#B7D9FF, -10%);
+    -fx-text-fill: #fff;
+}
+
+/***********************
+  Hyperlinks
+***********************/
+.hyperlink {
+  -fx-text-fill: #000;
+  -fx-underline: false;
+  -fx-font-size: 13px;
+  -fx-content-display: LEFT; /* icon + text */
+  -fx-graphic-text-gap: 6;
+}
+/*
+.hyperlink:hover {
+  -fx-background-color: steelblue;
+}
+
+.hyperlink.active {
+  -fx-background-color: steelblue;
+}
+*/
+
+.hyperlink:focused {
+  -fx-focus-color: transparent;
+  -fx-faint-focus-color: transparent;
+  -fx-border-color: transparent;
+  -fx-background-insets: 0;
+  -fx-border-insets: 0;
+}
