--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -1,20 +1,22 @@
 * {
   -fx-underline: none;
+  -fx-user-select: none;
 }
 
 .root {
-  -fx-font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  -fx-font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
   -fx-font-size: 14px;
   -fx-font-weight: normal;
   -fx-antialiasing: subpixel;
+  -fx-background-color: -fx-bg-color;
   -fx-font-smoothing-type: gray;
 }
 
 .container {
-  -fx-background-color: #f1f1f1;
-  -fx-border-radius: 8;
-  -fx-background-radius: 8;
-  -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.12), 8, 0.2, 0, 2);
+  -fx-background-color: -fx-container-bg;
+  -fx-border-radius: 10;
+  -fx-background-radius: 10;
+  -fx-effect: -fx-soft-shadow;
   -fx-padding: 14;
 }
 
@@ -26,43 +28,52 @@
   Base Typography
 ***********************/
 .label {
-  -fx-text-fill: -fx-text-color;
-  -fx-font-size: 14px;
+    -fx-text-fill: -fx-text-color;
+    -fx-font-size: 14px;
 }
 
 .title {
-  /*-fx-text-color: -fx-accent-color;*/
-  -fx-font-size: 24px;
-  -fx-font-weight: bold;
+    -fx-text-fill: -fx-text-color;
+    -fx-font-size: 32px;
+    -fx-font-weight: bold;
 }
 
 .text-field,
 .password-field,
 .combo-box {
-  -fx-background-radius: 6;
-  -fx-padding: 8 30;
-  -fx-border-color: #999;
-  -fx-border-radius: 6;
+    -fx-background-radius: 10;
+    -fx-padding: 10 16;
+    -fx-border-color: -fx-text-color;
+    -fx-border-radius: 10;
+}
+
+FontAwesomeIconView {
+    -fx-fill: -fx-text-color;
+}
+
+.login-text-field,
+.login-password-field{
+    -fx-padding: 10 16 10 30;
 }
 
 /***********************
   Buttons
 ***********************/
 .button {
-  -fx-font-weight: bold;
-  -fx-background-radius: 8;
-  -fx-cursor: hand;
-  -fx-padding: 8 14;
-  -fx-alignment: center;
-  -fx-content-display: LEFT; /* icon + text */
-  -fx-graphic-text-gap: 8;
-  -fx-background-color: #B7D9FF;
-  -fx-text-fill: #111;
+    -fx-font-weight: bold;
+    -fx-background-radius: 10;
+    -fx-cursor: hand;
+    -fx-padding: 10 16;
+    -fx-alignment: center;
+    -fx-content-display: LEFT; /* icon + text */
+    -fx-graphic-text-gap: 8;
+    -fx-background-color: -fx-accent-color;
+    -fx-text-fill: -fx-button-text-color;
 }
 
 .button.outline{
     -fx-background-color: transparent;
-    -fx-border-color: #B7D9FF;
+    -fx-border-color: -fx-accent-color;
     -fx-text-fill: #111;
     -fx-border-radius: 8;
     -fx-background-radius: 8;
@@ -71,40 +82,42 @@
 .button:hover,
 .button:focused,
 .button:pressed{
-  -fx-background-color: derive(#B7D9FF, -10%);
+  -fx-background-color: derive(-fx-accent-color, -10%);
 }
 
 .button.outline:hover,
 .button.outline:focused,
 .button.outline:pressed{
-    -fx-background-color: derive(#B7D9FF, -10%);
-    -fx-text-fill: #fff;
+    -fx-background-color: derive(-fx-accent-color, -10%);
 }
 
 /***********************
   Hyperlinks
 ***********************/
 .hyperlink {
-  -fx-text-fill: #000;
-  -fx-underline: false;
-  -fx-font-size: 13px;
-  -fx-content-display: LEFT; /* icon + text */
-  -fx-graphic-text-gap: 6;
+    -fx-text-fill: -fx-text-color;
+    -fx-underline: false;
+    -fx-font-size: 13px;
+    -fx-content-display: LEFT; /* icon + text */
+    -fx-graphic-text-gap: 6;
 }
-/*
+
 .hyperlink:hover {
-  -fx-background-color: steelblue;
+    -fx-background-radius: 6;
+    -fx-background-color: -fx-accent-color;
 }
 
 .hyperlink.active {
-  -fx-background-color: steelblue;
+    -fx-background-radius: 6;
+    -fx-background-color: -fx-accent-color;
 }
-*/
 
 .hyperlink:focused {
-  -fx-focus-color: transparent;
-  -fx-faint-focus-color: transparent;
-  -fx-border-color: transparent;
-  -fx-background-insets: 0;
-  -fx-border-insets: 0;
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-insets: 0;
+    -fx-background-radius: 6;
+    -fx-border-insets: 0;
+    -fx-background-color: -fx-accent-color;
 }
