--- a/src/main/resources/assets/css/variable.css
+++ b/src/main/resources/assets/css/variable.css
@@ -1,11 +1,15 @@
 .root {
-    -fx-text-color: #1D1402;
+    -fx-text-color: #040303;
     -fx-bg-color: #C6E6E3;
     -fx-primary-color: #F3A2BE;
     -fx-secondary-color: #FFD3D3;
     -fx-accent-color: #81BFB7;
     -fx-container-bg: #C6E6E3;
-    -fx-button-text-color: #1D1402;
+    -fx-button-text-color: #040303;
     -fx-soft-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 8, 0.2, 0, 2);
     -fx-strong-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.6), 16, 0.3, 0, 4);
+    -fx-error-color: #E63946;
+    -fx-success-color: #2ECC71;
+    -fx-warning-color: #F39C12;
+    -fx-info-color: #3498DB;
 }
