--- a/src/main/resources/assets/css/variable.css
+++ b/src/main/resources/assets/css/variable.css
@@ -5,7 +5,7 @@
     -fx-secondary-color: #FFD3D3;
     -fx-accent-color: #81BFB7;
     -fx-container-bg: #C6E6E3;
-    -fx-button-text-color: #040303;
+    -fx-button-text-color: #C6E6E3;
     -fx-soft-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 8, 0.2, 0, 2);
     -fx-strong-shadow: dropshadow(gaussian, rgba(0, 0, 0, 0.6), 16, 0.3, 0, 4);
     -fx-error-color: #E63946;
